[fix]overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@
 }
 
 .aside-container{
-  overflow: auto;
+  overflow: hidden;
   /* height: 100vh; */
 }
 
@@ -92,6 +92,7 @@ img{
 body{
   font-family: 'Roboto', sans-serif;
   background-color: var(--bg);
+  overflow: hidden;
  
 }
 
